--- a/index.html
+++ b/index.html
@@ -862,5 +862,93 @@ document.addEventListener('DOMContentLoaded', function(){
   openTab('home');
 });
 </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Mithun Tools",
+  "url": "https://mithunweb01.github.io/campus-finder-hub/",
+  "description": "Mithun Tools - 70+ free online tools including Smart Tools, Life Tools, India Tools, Finance & Tax Tools, Fun Tools, Number Tools, Operation Tools and Weather.",
+  "creator": {
+    "@type": "Person",
+    "name": "Mithun Karthikeyan"
+  },
+  "publisher": {
+    "@type": "Person",
+    "name": "Mithun Karthikeyan"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://mithunweb01.github.io/campus-finder-hub/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPage",
+      "name": "Smart Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#smart_tools",
+      "description": "Smart Tools like QR Code Generator, Barcode Tool, Text Tools, Currency Tools."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Life Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#life_tools",
+      "description": "Life tools including BMI Calculator, Health Tools, Age Calculator, Calorie Tools."
+    },
+    {
+      "@type": "WebPage",
+      "name": "India Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#india_tools",
+      "description": "Useful tools for India such as PIN Code Finder, IFSC Finder, RTO Code Finder, STD Code Finder."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Number Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#number_tools",
+      "description": "Number tools including calculators, converter tools, random number generators and more."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Fun & Viral Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#fun_tools",
+      "description": "Fun tools like prank tests, love calculator, luck meter and random fun generators."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Finance & Tax Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#finance_tools",
+      "description": "Finance tools including GST calculator, income tax estimator, loan calculator, EMI calculator."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Operations Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#operations_tools",
+      "description": "Operation tools like sorting, unit conversion, PDF tools, text filters and searching tools."
+    },
+    {
+      "@type": "WebPage",
+      "name": "Weather Tools",
+      "url": "https://mithunweb01.github.io/campus-finder-hub/#weather",
+      "description": "Weather tool showing temperature, humidity, wind speed and live weather updates."
+    }
+  ],
+  "tool": [
+    { "@type": "SoftwareApplication", "name": "QR Code Generator", "url": "https://mithunweb01.github.io/campus-finder-hub/#qr" },
+    { "@type": "SoftwareApplication", "name": "Barcode Generator", "url": "https://mithunweb01.github.io/campus-finder-hub/#barcode" },
+    { "@type": "SoftwareApplication", "name": "Age Calculator", "url": "https://mithunweb01.github.io/campus-finder-hub/#age" },
+    { "@type": "SoftwareApplication", "name": "BMI Calculator", "url": "https://mithunweb01.github.io/campus-finder-hub/#bmi" },
+    { "@type": "SoftwareApplication", "name": "UPI QR Generator", "url": "https://mithunweb01.github.io/campus-finder-hub/#upi_qr" },
+    { "@type": "SoftwareApplication", "name": "PIN Code Finder", "url": "https://mithunweb01.github.io/campus-finder-hub/#pincode" },
+    { "@type": "SoftwareApplication", "name": "IFSC Finder", "url": "https://mithunweb01.github.io/campus-finder-hub/#ifsc" },
+    { "@type": "SoftwareApplication", "name": "Loan Calculator", "url": "https://mithunweb01.github.io/campus-finder-hub/#loan" },
+    { "@type": "SoftwareApplication", "name": "GST Calculator", "url": "https://mithunweb01.github.io/campus-finder-hub/#gst" },
+    { "@type": "SoftwareApplication", "name": "Love Calculator", "url": "https://mithunweb01.github.io/campus-finder-hub/#love" },
+    { "@type": "SoftwareApplication", "name": "Random Number Generator", "url": "https://mithunweb01.github.io/campus-finder-hub/#rng" },
+    { "@type": "SoftwareApplication", "name": "Text Case Converter", "url": "https://mithunweb01.github.io/campus-finder-hub/#case" },
+    { "@type": "SoftwareApplication", "name": "Weather Checker", "url": "https://mithunweb01.github.io/campus-finder-hub/#weather" }
+  ]
+}
+</script>
+
 </body>
 </html>
